--- a/ios/Base.lproj/LaunchScreen.storyboard
+++ b/ios/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,17 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LaunchScreen.storyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xE7-vT-FFp">
-                                <rect key="frame" x="108" y="442.5" width="198" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cgvlaunch" translatesAutoresizingMaskIntoConstraints="NO" id="TPq-tx-VW0">
+                                <rect key="frame" x="87" y="164" width="240" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="LZL-ft-Ym8"/>
+                                    <constraint firstAttribute="width" constant="240" id="wMf-hT-hfC"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xE7-vT-FFp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="OrR-cm-HCP"/>
-                            <constraint firstItem="xE7-vT-FFp" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="xAn-9J-Ayp"/>
+                            <constraint firstItem="TPq-tx-VW0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="N87-0h-MYT"/>
+                            <constraint firstItem="TPq-tx-VW0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="V7V-SA-ptF"/>
+                            <constraint firstItem="TPq-tx-VW0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fcc-fq-cRG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -38,4 +38,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cgvlaunch" width="400" height="242"/>
+    </resources>
 </document>
